--- a/Index.html
+++ b/Index.html
@@ -149,7 +149,7 @@ $(document).ready(function () {
 <p><a href="http://milton-the-cat.rocks/learnr/r/r_getting_started/#section-a-quick-tour-of-r-studio" target="_blank">A quick tour of R Studio</a></p>
 <p>I’d suggest watching this back-to-back with the next video in the sequence, which starts moving into more specifics about how you can get started with some work!</p>
 <p><a href="http://milton-the-cat.rocks/learnr/r/r_getting_started/#section-working-in-rstudio" target="_blank">Working in RStudio</a></p>
-<p>Rather than creating a new file from scratch right now, you can download the solutions from Module 1 as a workbook <a href="https://github.com/stats4sd/r2020_04Rstudio/raw/main/Module-1-Solutions.zip">here</a>.</p>
+<p>Rather than creating a new file from scratch right now, you can download the solutions from the intro module as a workbook <a href="https://github.com/stats4sd/R4CCRP_04_rstudio/raw/main/intro-module-solutions.zip">here</a>.</p>
 <p>And if you then open this up in RStudio (Using the menu system: File-&gt;Open File) you can get an idea of how the interface works.</p>
 <p>Once opened, your window should look something like this</p>
 <p><img src="images/Window.JPG" width="90%" style="display: block; margin: auto;" /></p>
@@ -163,7 +163,7 @@ $(document).ready(function () {
 </div>
 <div id="section-working-with-projects" class="section level2">
 <h2>Working with projects</h2>
-<p>You can download the solutions for Module 2 in RMD format, and the data file used, in CSV format <a href="https://github.com/stats4sd/r2020_04Rstudio/raw/main/Module-2-Solutions.zip">here</a></p>
+<p>You can download the solutions for the ggplot part 1 module in RMD format, and the data file used, in CSV format <a href="https://github.com/stats4sd/R4CCRP_04_rstudio/raw/main/ggplot-part1-solutions.zip">here</a></p>
 <p>This is a good opportunity to learn about working with project files, importing data, and installing and loading packages.</p>
 <p>First of all - we should start by extracting the contents of that zip file into a sensible folder somewhere on your computer.</p>
 <p>Then we can create a new project in RStudio (File-&gt;New Project) and setting this to an “Existing Folder” - the folder where you just extracted these files to. As explained in the video, projects are a really useful way of keeping your work organised, and making it easy to link to input data files and store output files in a coherent workflow.</p>
@@ -172,11 +172,35 @@ $(document).ready(function () {
 </div>
 <div id="section-installing-packages" class="section level2">
 <h2>Installing Packages</h2>
+<div id="section-automatically-through-the-prompt-message-install-at-the-top-of-the-file" class="section level3">
+<h3>Automatically through the prompt ‘message ’install’ at the top of the file</h3>
 <p>When you do this you will probably see a prompt at the top of the RMD window telling you that the ggplot2 package is used in this script, but has not been installed.</p>
 <p><img src="images/ggplot2%20not%20installed.JPG" width="70%" style="display: block; margin: auto;" /></p>
 <p>You will see this message when your file contains a call to <code>library()</code> but the package inside that function is not installed.</p>
 <p>To install ggplot2 you can then click on the install button at the top of your page and this will then connect to the CRAN repository to download it. Check the final message which appears. If you see something which ends with ‘success’ then the package has installed correctly! If you see an error message after trying to install a package then you have run into an issue. Don’t be afraid to ask for help if you come across issues in this process for package installation at first, as there can sometimes be firewall, or other compatibility issues, which can be resolved with a bit of technical support.</p>
+</div>
+<div id="section-manually-from-the-bottom-right-pane" class="section level3">
+<h3>Manually from the bottom right pane</h3>
+<p>It might also happen for some reason that you don’t see the yellow message at the top of the RMD window - maybe you closed it or clicked the <em>Don’t show again</em> button. In that case, try running the library commands. Who knows, maybe the package is already installed. If it is not, you will see the following type of error:</p>
+<blockquote>
+<p>Error in library(ggplot2) : there is no package called ‘ggplot2’</p>
+</blockquote>
+<p>You can then install the package manually by:</p>
+<ul>
+<li>clicking the <code>Packages</code> tab in the bottom right pane.</li>
+</ul>
+<p><img src="images/packges%20tab.JPG" width="80%" style="display: block; margin: auto;" /></p>
+<ul>
+<li>clicking the <code>Install</code> button.</li>
+</ul>
+<p><img src="images/install%20button.JPG" width="80%" style="display: block; margin: auto;" /></p>
+<ul>
+<li>typing the name of the package in the ‘Packages’ field, and press ‘Install’</li>
+</ul>
+<p><img src="images/install%20window.JPG" width="80%" style="display: block; margin: auto;" /></p>
+<p>You then wait a little and if, as said just before, you see something which ends with ‘success’ then the package has installed correctly. If instead you see some error, that’s time to look for help!</p>
 <p>You can watch the video about installing and loading packages here: <a href="http://milton-the-cat.rocks/learnr/r/r_getting_started/#section-installing-and-loading-packages" target="_blank">Installing and loading packages</a></p>
+</div>
 </div>
 <div id="section-markdown-files" class="section level2">
 <h2>Markdown Files</h2>
